fixed banner overflow

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -221,6 +221,7 @@ p.sidebarHead {
 }
 
 .active-filters-container {
+  max-width: 700px;
   display: flex;
   flex-wrap: wrap;
   padding: 10px;
